[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/logging.gd" type="Script" id=1]

[node name="Logging" type="Node"]
script = ExtResource( 1 )

[node name="GUI" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -38.0
margin_right = 100.0
margin_bottom = 135.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
margin_right = 200.0
margin_bottom = 173.0

[node name="UsernameLine" type="LineEdit" parent="GUI/VBoxContainer"]
margin_right = 200.0
margin_bottom = 24.0
clear_button_enabled = true
placeholder_text = "Username"

[node name="PasswordLine" type="LineEdit" parent="GUI/VBoxContainer"]
margin_top = 28.0
margin_right = 200.0
margin_bottom = 52.0
secret = true
clear_button_enabled = true
placeholder_text = "Password"

[node name="LoginButton" type="Button" parent="GUI/VBoxContainer"]
margin_top = 56.0
margin_right = 200.0
margin_bottom = 76.0
text = "Login"

[node name="LoginRequest" type="HTTPRequest" parent="GUI/VBoxContainer"]
use_threads = true

[node name="LoginInfo" type="Label" parent="GUI"]
margin_top = 79.0
margin_right = 200.0
margin_bottom = 93.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
valign = 1

[connection signal="pressed" from="GUI/VBoxContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="request_completed" from="GUI/VBoxContainer/LoginRequest" to="." method="_on_HTTPRequest_request_completed"]
